Switch to yaml config file, add test project

--- a/src/InstallerLib/InstallerLib.csproj
+++ b/src/InstallerLib/InstallerLib.csproj
@@ -7,13 +7,18 @@
 
   <PropertyGroup>
     <PackageId>SuiteInstaller.InstallerLib</PackageId>
-	<CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</CurrentYear>
-	<CurrentMonthDay>$([System.DateTime]::Now.ToString(MMdd))</CurrentMonthDay>
-	<VersionPrefix>1.0.$(CurrentYear).$(CurrentMonthDay)</VersionPrefix>
+    <CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</CurrentYear>
+    <CurrentMonthDay>$([System.DateTime]::Now.ToString(MMdd))</CurrentMonthDay>
+    <VersionPrefix>1.0.$(CurrentYear).$(CurrentMonthDay)</VersionPrefix>
     <Title>SuiteInstaller - InstallerLib</Title>
     <Description>Library for installation and automatic updates of a suite of Windows programs.</Description>
+    <Authors>Scott Stephens</Authors>
     <Readme>README.md</Readme>
   </PropertyGroup>
+
+    <ItemGroup>
+      <InternalsVisibleTo Include="InstallerLibTests" />
+    </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="pub\**" />
@@ -24,6 +29,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.*" />
     <PackageReference Include="Newtonsoft.Json" Version="13.*" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <COMReference Include="IWshRuntimeLibrary.dll">
